Removed improted bootstrap link and fixed the issue with overlapping css.

--- a/src/styles/singleEventPage.css
+++ b/src/styles/singleEventPage.css
@@ -96,6 +96,11 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
+.centered-element {
+  display: block;
+  margin: 10px auto; 
+}
+
 /* Media Queries for Responsiveness */
 
 /* For large desktops */
